[tool.poetry]
name = "telegram_bot_users_requests"
version = "0.1.0"
description = ""
authors = ["Viachaslau <slava@informatics.by>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
clients = "^1.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
